###### TWE 5.1-1 RELEASED ######
2014-09-22 Sasa Bojanic <sasaboy@together.at>
   # Now displaying warning if XPDL String variable is not used

2014-09-05 Sasa Bojanic <sasaboy@together.at>
   # XMLTextPanel now supports new parameter to specify if only numbers can be entered in the text field
   # Shark mode:
      - workload related "number" attributes now using new feature of XMLTextPanel to allow entering only numbers in the text field
      - hidding href and namespace attributes of ExternalReference element (because they are not used by Shark)
      
2014-09-04 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: 
      - better support for kernel ext. attrib. for overriding process context when instantiating activity (variables recognizing when referenced by this ext. attrib.)
      - when creating new ext. attrib. for some entity, list of possible ext. attribs. excludes the shark specific ones
      - turned-off feature for inheriting ext. attribs from package->workflow process->activity
      - added validation for OVERRIDE_PROCESS_CONTEXT ext. attrib.
      - now natively supporting DataField ext. attrib URLVariable
      
2014-08-27 Sasa Bojanic <sasaboy@together.at>
	# Supporting windows XP (patch by Vjecheslav)

2014-08-21 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: 
      - natively supporting ext. attribs for Standard and History related assignment manager
      - natively supporting kernel ext. attrib for overriding process context when instantiating activity
      - checkbox to specify if WebClient and Engine configuration should be defined      
   # XMLGroupPanel: new constructor to be able to specify if empty space should be added to the end of the group or not

2014-08-20 Sasa Bojanic <sasaboy@together.at>
   # Fix: "Create outlook variables" action was not disabled when element is read-only
   # Fix: "Edit expression in associated application" action was not disabled when element is read-only
   # Shark mode: 