@@ -1,5 +1,6 @@
 ###### TWE 5.1-1 RELEASED ######
 2014-09-22 Sasa Bojanic <sasaboy@together.at>
+   # Shark mode: Fix: not offering XPDL String and Configuration string variables for Performer, Deadline, Actual parameter and Transition condition expressions
    # Now displaying warning if XPDL String variable is not used
 
 2014-09-05 Sasa Bojanic <sasaboy@together.at>
